WEB-5923 Added default value for criteria rule action and fixed visibility of remove link

--- a/fid-web/src/main/webapp/style/legacy/eventFormEdit.css
+++ b/fid-web/src/main/webapp/style/legacy/eventFormEdit.css
@@ -532,6 +532,6 @@ div.verticalEditPanel * {
     padding-right: 5px;
 }
 
-.form-action {
+.form-actions {
     text-align: right;
 }
